# backend/src/routes/customer.js
@@ -6,4 +6,5 @@ const customerController = require('../controllers/customer');
 router.get('/tutorialForCustomer', middleWares.checkAuthentication, customerController.getTutorialsForCustomer);
 router.post('/uploadCustomerProfile', middleWares.checkAuthentication, customerController.uploadCustomerProfile);
 router.get('/customerProfile', middleWares.checkAuthentication, customerController.getCustomerProfile);
+router.put('/createReview', middleWares.checkAuthentication, customerController.createReview);
 module.exports = router;
